automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = N\n",
+    "names = list(map(lamba))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
