--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda name: name['name'], restaurants))\n",
+    "names = list(map(lambda restaurnt_name: name['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
