--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review_counts = list(map(lambda review_count: restaurant_name['name'], restaurants))\n",
+    "review_counts = list(map(lambda review_count: review_count['name'], restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
