--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "total_reviews = map(sum, review_counts)\n",
+    "total_reviews = intmap(sum, review_counts)\n",
     "total_reviews # 3420"
    ]
   },
