--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "total_reviews = sum\n",
+    "total_reviews = sum()\n",
     "total_reviews # 3420"
    ]
   },
