--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    filter(lambda restaurant: resta)"
+    "    filter(lambda restaurant: restaurant['is_closed'], restaurants)"
    ]
   },
   {
