automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,19 +357,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    filter(lambda restaurant: restaurant['is_closed'], restaurants)"
+    "    return listfilter(lambda restaurant: restaurant['is_closed'], restaurants)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<filter at 0x7f7ef80c2518>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)\n",
     "\n",
