--- a/index.ipynb
+++ b/index.ipynb
@@ -357,12 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants))"
+    "    return list(filter(map(lambda restaurant: restaurant['is_closed'], restaurants)))"
    ]
   },
   {
