automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(map(lambda restaurant: restaurant['is_closed'], restaurants)))"
+    "    return list(filter(mlambda restaurant: restaurant['is_closed'], restaurants)))"
    ]
   },
   {
