--- a/index.ipynb
+++ b/index.ipynb
@@ -357,17 +357,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-32-4b2a70667f29>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-4b2a70667f29>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(lambda restaurant: !restaurant['is_closed'], restaurants))\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants))"
+    "    return list(filter(lambda restaurant: !restaurant['is_closed'], restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +389,7 @@
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
