--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "     return list(filter(lambda restaurant: restaurant['is_closed'] == False, restaurants))"
+    "     return list(filter(lambda restaurant: restaurant['review'] == False, restaurants))"
    ]
   },
   {
